// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionEditor should render 1`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      disabled={false}
      id="section-title"
      label={
        <DescribedText
          description="This is displayed in the section navigation. You can enable or disable in 'settings'"
        >
          Section title
        </DescribedText>
      }
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 1"
    />
    <Label
      bold={true}
    >
      <DescribedText
        description="If you do not want an introduction page, leave these blank"
      >
        Section introduction page
      </DescribedText>
    </Label>
    <SectionEditor__IntroCanvas>
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "piping": true,
          }
        }
        disabled={false}
        id="introduction-title"
        label="Introduction title"
        multiline={false}
        name="introductionTitle"
        onUpdate={[Function]}
        placeholder=""
        size="large"
        testSelector="txt-introduction-title"
        value="Intro title"
      />
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "bold": true,
            "emphasis": true,
            "heading": true,
            "list": true,
            "piping": true,
          }
        }
        disabled={false}
        id="introduction-content"
        label="Introduction content"
        multiline={true}
        name="introductionContent"
        onUpdate={[Function]}
        placeholder=""
        testSelector="txt-introduction-content"
        value="Intro content"
      />
    </SectionEditor__IntroCanvas>
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;

exports[`SectionEditor should render 2`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      disabled={false}
      id="section-title"
      label={
        <DescribedText
          description="This is displayed in the section navigation. You can enable or disable in 'settings'"
        >
          Section title
        </DescribedText>
      }
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 2"
    />
    <Label
      bold={true}
    >
      <DescribedText
        description="If you do not want an introduction page, leave these blank"
      >
        Section introduction page
      </DescribedText>
    </Label>
    <SectionEditor__IntroCanvas>
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "piping": true,
          }
        }
        disabled={false}
        id="introduction-title"
        label="Introduction title"
        multiline={false}
        name="introductionTitle"
        onUpdate={[Function]}
        placeholder=""
        size="large"
        testSelector="txt-introduction-title"
        value="Intro title"
      />
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "bold": true,
            "emphasis": true,
            "heading": true,
            "list": true,
            "piping": true,
          }
        }
        disabled={false}
        id="introduction-content"
        label="Introduction content"
        multiline={true}
        name="introductionContent"
        onUpdate={[Function]}
        placeholder=""
        testSelector="txt-introduction-content"
        value="Intro content"
      />
    </SectionEditor__IntroCanvas>
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;
